--- a/changelog.txt
+++ b/changelog.txt
@@ -3,5 +3,6 @@ Chara.Chat mod for Stardew Valley: change log
 v1.0.1
 * Farmer's own children can only speak from toddler age
 * Improved acting for farmer's children
-* Fixed: mod prevented farmer from kissing family. Convo will no longer open until after first kiss of day.
+* Fixed: Mod prevented farmer from kissing family. Convo will no longer open until after first kiss of day.
 * Fixed: Use display name instead of name in empty convo window. Some mods have weird base names for NPCs.
+* Workaround: UI size tied to zoom level in unpredictable ways. Adjust zoom on open and close instead.
