--- a/changelog.txt
+++ b/changelog.txt
@@ -7,4 +7,4 @@ v1.0.1
 * Fixed: Mod prevented farmer from hugging/kissing family. Convo will no longer open until after first one of the day.
 * Fixed: Use display name instead of name in empty convo window. Some mods have weird base names for NPCs.
 * Workaround: UI size tied to zoom level in unpredictable ways. Adjust zoom on open and close instead. Slight visual artifact.
-* Add settings menu and ability to switch between budget and quality AI setting.
+* Add settings menu and ability to switch between budget and high quality AI setting.
